# struct-parse

./: LICENSE  README.md  Test.hs  example.toml  stack.yaml  struct-parse.cabal
Control/: Parsing.hs  StructParser.hs
Control/StructParser/: Parser.hs  Pretty.hs  Types.hs
Data/: ConstIndex.hs  Object.hs  TomlObject.hs
Data/Object/: Parse.hs  Types.hs
