name:                struct-parse
version:             0.1.0
synopsis:            Flexible and error-reporting parser for structures (e.g. JSON)
-- description:
homepage:            http://github.com/esmolanka/struct-parse
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
-- copyright:
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
    Control.StructParser
    Data.TomlObject

  other-modules:
    Control.StructParser.Parser
    Control.StructParser.Pretty
    Control.StructParser.Types
    Control.Parsing
    Data.ConstIndex
    Data.Object
    Data.Object.Parse
    Data.Object.Types

  ghc-options:         -Wall -Werror -fno-warn-name-shadowing -fno-warn-unused-do-bind

  build-depends:
    base, mtl, ansi-wl-pprint, containers, transformers, free,
    recursion-schemes, scientific, unordered-containers, text, htoml,
    time, parsec, hashable

  -- hs-source-dirs:
  default-language:    Haskell2010
